@@ -94,10 +94,13 @@ define("tinymce/pasteplugin/Quirks", [
 		}
 
 		/**
-		 * WebKit has a nasty bug where the all runtime styles gets added to style attributes when copy/pasting contents.
+		 * WebKit has a nasty bug where the all computed styles gets added to style attributes when copy/pasting contents.
 		 * This fix solves that by simply removing the whole style attribute.
 		 *
-		 * Todo: This can be made smarter. Keeping styles that override existing ones etc.
+		 * The paste_webkit_styles option can be set to specify what to keep:
+		 *  paste_webkit_styles: "none" // Keep no styles
+		 *  paste_webkit_styles: "all", // Keep all of them
+		 *  paste_webkit_styles: "font-weight color" // Keep specific ones
 		 *
 		 * @param {String} content Content that needs to be processed.
 		 * @return {String} Processed contents.
@@ -108,8 +111,38 @@ define("tinymce/pasteplugin/Quirks", [
 				return content;
 			}
 
-			if (editor.settings.paste_remove_styles || editor.settings.paste_remove_styles_if_webkit !== false) {
-				content = content.replace(/ style=\"[^\"]+\"/gi, '');
+			// Filter away styles that isn't matching the target node
+
+			var webKitStyles = editor.getParam("paste_webkit_styles", "color font-size font-family background-color").split(' ');
+
+			if (editor.settings.paste_remove_styles_if_webkit === false) {
+				webKitStyles = "all";
+			}
+
+			// Keep specific styles that doesn't match the current node computed style
+			if (webKitStyles != "all") {
+				var dom = editor.dom, node = editor.selection.getNode();
+
+				content = content.replace(/ style=\"([^\"]+)\"/gi, function(a, value) {
+					var inputStyles = dom.parseStyle(value, 'span'), outputStyles = {};
+
+					if (webKitStyles === "none") {
+						return '';
+					}
+
+					for (var i = 0; i < webKitStyles.length; i++) {
+						if (dom.toHex(dom.getStyle(node, webKitStyles[i], true)) != inputStyles[webKitStyles[i]]) {
+							outputStyles[webKitStyles[i]] = inputStyles[webKitStyles[i]];
+						}
+					}
+
+					outputStyles = dom.serializeStyle(outputStyles, 'span');
+					if (outputStyles) {
+						return ' style="' + outputStyles + '"';
+					}
+
+					return '';
+				});
 			}
 
 			return content;
